--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -51,7 +51,7 @@
 
 .login-form a {
     text-align: center;
-    text-decoration: none;
-    color: inherit;
+    /* text-decoration: none;
+    color: inherit; */
     font-size: 13px;
 }
