--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;600&display=swap');
+
 @import "reset.css";
 @import "variables.css";
 /* Components */
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
 
 /* Screens*/
 @import "screens/login.css";
 
 body {
     font-family: 'Hind Siliguri', sans-serif;
+    /* height: 1000vh; /* status/navitation bar fixed test */
 }
 
